@@ -45,6 +45,7 @@ dependencies {
 }
 
 test {
+    jvmArgs("--enable-preview")
     useJUnitPlatform()
 }
 
