@@ -61,6 +61,7 @@ dependencies {
 }
 
 test {
+    jvmArgs("--enable-preview")
     useJUnitPlatform()
 }
 
